New in version 1.9.0

Plot of pressure dependent quantities is now available also
for ltherm_freq.

Interpolation of elastic constants is made also when lmurn=.TRUE.
(In collaboration with X. Gong).

Added the calculation of the bulk modulus in anisotropic solids
without elastic constants.

Added the many_k option for GPU calculations with many k points.
(Still experimental, in collaboration with X. Gong)

05/05/2023 Version 1.8.1 is now frozen
New in version 1.8.1
This version is identical to 1.8.0 but it is compatible with QE7.2.

26/04/2023 Version 1.8.0 is now frozen
New in version 1.8.0

Added the possibility to plot the Hugoniot curves T(p) and V(p).
(in collaboration with X. Gong)

A reorganization of the plots of the thermodynamic quantities
as a function of pressure.
(in collaboration with X. Gong)

05/07/2022 Version 1.7.1 is now frozen
New in version 1.7.1

This version is identical to 1.7.0 but it is compatible with QE7.1.

05/07/2022 Version 1.7.0 is now frozen
New in version 1.7.0

This version is compatible with QE 7.0.

Added a plot of entropy, energy and free energy as a function of 
temperature for several pressures.

Added the possibility to compute the electronic free energy
from the total energy as a function of smearing (still experimental).

10/01/2022 Version 1.6.1 is now frozen
New in version 1.6.1

This version is identical to 1.6.0 but it is compatible with QE7.0.

27/12/2021 Version 1.6.0 is now frozen
New in version 1.6.0

This version is compatible with QE6.8.

Added a plot of the enthalpy as a function of pressure. 
Added a plot of the crystal parameters as a function of pressure.
Added a plot of the Murnaghan fit and of the pressure as a function 
of volume at several temperatures.

Added plots of the anharmonic quantities as a function of temperature
for several pressures.

Added plots of the bulk modulus, thermal expansion, isobaric and isochoric
heat capacities and average Gruneisen parameter as a function of pressure